13622 Memory leak in coretemp_create_sensor Reviewed by: Yuri Pankov <yuripv@yuripv.dev> Reviewed by: Jason King <jason.king@joyent.com> Reviewed by: Paul Winder <paul@winder.uk.net> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Dan McDonald <danmcd@joyent.com>